# Training

./: .gitignore  README.md  Trainings  asset-manifest.json  index.html
AI-ML/: .gitignore  pyproject.toml  start_notebook
AI-ML/01.Essential Math for AI and ML/: 01-04-Exponentials Radicals and Logarithms.ipynb  01-08-Functions.ipynb  02-04-Critical Points and Optimization.ipynb  03-04-Matrix Multiplication and more.ipynb  03-05-Transformations Eigenvectors and Eigenvalues.ipynb  04-01-Data and Visualization.ipynb  04-03-Comparing Data.ipynb
AI-ML/02.Exploratory Data Analysis/: 01-Python-EDA.ipynb  02-EDA-Assignment.ipynb  03-Communicating-With-Data-Assignment.ipynb  requirements.txt
AI-ML/04.ML Algorithms/: 02 - Split Train Test and Val.ipynb  10 - Random Forest - Fit Model.ipynb  11 - Boosting.ipynb  homeprices-multiple-variable.csv
AI-ML/06.Intro to Deeplearning/: 05.Text Classification using Torchtext.ipynb  06.Word2Vec and Seq2Seq Model.ipynb  11.Classification-with-Keras.ipynb  12.CNN-with-Keras.ipynb
AI-ML/07.NLP And Transformers/: 3-AttentionKeras.ipynb
AI-ML/08.Langchain/: 01.GetStarted.ipynb  05.Runnables.ipynb  08.RAGs.ipynb  09.Agents.ipynb
AI-ML/09.Agentic AI/: .gitignore  pyproject.toml
AI-ML/09.LLM/: 02.OpenSource Tokenizers.ipynb  03.OpernSource Models.ipynb
AI-ML/09.LLM Engineering/: 01.Intro-HF.CO.ipynb  04. Model Quantization.ipynb  05.Finetuning.ipynb
AI-ML/1.Essential Math for AI and ML/: 01-01-Introduction to Equations.ipynb  01-03-Systems of Equations.ipynb  01-06-Factorization.ipynb  (+4 more)
FLET/: main.py  pyproject.toml
ML-LEARN/: README.md  pyproject.toml  scikit-learn.ipynb
NLP/: pyproject.toml  start_notebook
(+1190 files in other folders)
