[tool.poetry]
name = "flet-learning"
version = "0.1.0"
description = ""
authors = ["Shakeel Ansari <ShakeelAnsari63@Gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flet = "^0.10.3"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
