[tool.poetry]
name = "ml-learn"
version = "0.1.0"
description = ""
authors = ["Shakeel Ansari <Shakeel.Ansari@Gmail.com>"]
readme = "README.md"
packages = [{include = "ml_learn"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.2"
scikit-learn = "^1.2.2"
matplotlib = "^3.7.1"
jupyterlab = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
