[tool.poetry]
name = "nlp"
version = "0.1.0"
description = "NLP Training"
authors = ["Shakeel Ansari <Shakeel.Ansari@Gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
notebook = "^6.5.4"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
